--- a/images.html
+++ b/images.html
@@ -5,22 +5,8 @@
   <meta charset="utf-8">
   <title>Ismail's Personal Site</title>
 
-  <style>
-    body {
-      background-color: rgb(153, 0, 101);
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 
-
-  <style>
-    img {
-
-      width: 13%;
-      height: 13%;
-      padding: 15px;
-
-    }
-  </style>
 
 
 </head>
@@ -29,12 +15,11 @@
 
   <div>
 
-    <img src="ph/9.jpg" />
-
+  
 
   </div>
 
-
+  <a href="index.html">Home</a>
 
 </body>
 
