--- a/index.html
+++ b/index.html
@@ -5,48 +5,30 @@
   <meta charset="utf-8">
   <title>Ismail's Personal Site</title>
 
+  <link rel="stylesheet" href="css/styles.css">
+
 
 
 </head>
 
-<body>
 
-<table cellspacing="20">
-  <tr>
-      <td>  <img src="ph/11.jpg"/></td>
+  <table cellspacing="20">
+    <tr>
+      <td> <img src="ph/11.jpg" /></td>
       <td>
         <h1>Ismail Mohamed</h1>
-        <p><em>President and CEO of Ismail enterprise</em></p>
-        <p>I'm a Quality Assurannce tester and mentor. I love drinking coffee.</p>
-
+        <p><em>Software Quality Engineer</em></p>
       </td>
+    </tr>
 
-
-
-
-  </tr>
-
-</table>
-
-
-
+  </table>
 
   <hr>
 
-
-
-
   <h3>Education</h3>
   <p>Web development: Gearge Mason University</p>
-
-  <a href="Contact-me.html">Contact me</a>
-
+  <a href="Contact-me.html">Contact me</a><br />
   <a href="images.html">Images</a>
-
-
-
-
-
 
 </body>
 
