--- a/Contact-me.html
+++ b/Contact-me.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Contac MeIsmail's Personal Site</title>
 
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -31,7 +33,7 @@
 
 
 
-
+  <a href="index.html">Home</a>
 
 
 </body>
